--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
